--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
-
+       
     </dependencies>
 
     <build>
@@ -153,6 +153,10 @@
     </build>
     <repositories>
         <repository>
+            <id>maven2</id>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
             <url>http://repository.primefaces.org/</url>
             <id>PrimeFaces-maven-lib</id>
             <layout>default</layout>
@@ -170,7 +174,7 @@
                 <enabled>true</enabled>
                 <checksumPolicy>warn</checksumPolicy>
             </releases>
-        </repository>
+        </repository>   
     </repositories>
 </project>
 
